--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "react-fontawesome": "^1.6.1",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.12",
-    "redux": "^3.7.2",
-    "redux-observable": "^0.16.0",
+    "react-scripts": "3.2.0",
+    "redux": "^4.0.1",
+    "redux-observable": "^1.2.0",
     "reduxsauce": "^0.6.0",
-    "rxjs": "^5.4.3",
+    "rxjs": "^6.5.3",
+    "rxjs-compat": "^6.5.3",
     "soundfont-player": "^0.10.6",
     "styled-components": "^2.2.1",
     "vexflow": "^1.2.84"
@@ -38,8 +39,9 @@
     "husky": "^0.14.3",
     "lint-staged": "^4.1.0",
     "prettier": "^1.6.1",
-    "reactotron-react-js": "^1.12.2",
-    "reactotron-redux": "^1.12.2",
+    "reactotron-core-client": "^2.8.8",
+    "reactotron-react-js": "^3.3.6",
+    "reactotron-redux": "^3.1.2",
     "web-audio-test-api": "^0.5.2"
   },
   "lint-staged": {
@@ -51,5 +53,17 @@
   "prettier": {
     "singleQuote": true,
     "semi": false
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
